src/pydjinni/generator/objc/it/swift/error/expected/include/objc/TSTFooError.h
// AUTOGENERATED FILE - DO NOT MODIFY!
// This file was generated by PyDjinni from 'error.pydjinni'
#import <Foundation/Foundation.h>
FOUNDATION_EXPORT NSErrorDomain const TSTFooErrorDomain;
/// error comment
typedef NS_ERROR_ENUM(TSTFooErrorDomain, TSTFooError) {
    /// error code comment
    TSTFooErrorSomethingWrong,
    TSTFooErrorSomethingElseWrong,
    /// an error with parameters
    /// 
    /// - Parameter parameter: is an important additional information
    TSTFooErrorSomethingWithParameters
}
NS_SWIFT_NAME(FooError);

FOUNDATION_EXPORT NSErrorUserInfoKey const TSTFooErrorSomethingWithParametersParameter NS_SWIFT_NAME(FooErrorSomethingWithParametersParameter);
